--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,8 @@
     <color name="colorPrimaryDark"> #141730</color>
     <color name="colorAccent">#FFD15C</color>
     <color name="background">#D9DDFF </color>
-    <color name="bottom_navigation_view_color">#912b1b53</color>
+    <color name="background_header">#9ca1c9</color>
+    <color name="bottom_navigation_view_color">#bf3d4269</color>
     <color name="color_grey">#cb444869</color>
     <color name="color_grey_700">#616161</color>
     <color name="text_white_unselected">#8effffff</color>
