--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -71,7 +71,7 @@
             android:gravity="center"
             android:text="@string/login_register"
             android:textColor="@color/text_white_selected"
-            android:textSize="@dimen/text_mid_size"
+            android:textSize="@dimen/text_s"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/button_login"
