--- a/app/src/main/res/layout/item_card_hike.xml
+++ b/app/src/main/res/layout/item_card_hike.xml
@@ -33,7 +33,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginBottom="8dp"
-                android:textSize="@dimen/text_mid_size"
+                android:textSize="@dimen/text_s"
                 android:text="Черногорский хребет, Карпаты"
                 android:textColor="@color/text_white_selected" />
 
