--- a/app/src/main/res/layout/item_card_news.xml
+++ b/app/src/main/res/layout/item_card_news.xml
@@ -34,7 +34,7 @@
             android:layout_marginEnd="8dp"
             android:textColor="@color/color_black"
             android:text="Презентация спортивного туризма тк Романтик"
-            android:textSize="@dimen/text_mid_size" />
+            android:textSize="@dimen/text_s" />
 
 
         <TextView
