--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -7,7 +7,7 @@
         android:background="@drawable/start_activity">
 
     <EditText
-            android:id="@+id/edit_text_display_name"
+            android:id="@+id/etDisplayName"
             android:layout_width="236dp"
             android:layout_height="40dp"
             android:layout_marginBottom="8dp"
@@ -18,7 +18,7 @@
             android:inputType="textEmailAddress"
             android:textColor="@color/text_white_selected"
             android:textColorHint="@color/color_grey"
-            app:layout_constraintBottom_toTopOf="@+id/edit_text_email_id"
+            app:layout_constraintBottom_toTopOf="@+id/etEmail"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -27,7 +27,7 @@
 
     <EditText
 
-            android:id="@+id/edit_text_email_id"
+            android:id="@+id/etEmail"
             android:layout_width="236dp"
             android:layout_height="40dp"
             android:layout_marginBottom="8dp"
@@ -47,7 +47,7 @@
 
     <EditText
 
-            android:id="@+id/edit_text_password"
+            android:id="@+id/etPassword"
             android:hint="@string/password"
             android:inputType="textPassword"
             android:layout_width="236dp"
@@ -59,14 +59,14 @@
             android:layout_marginLeft="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginTop="6dp"
-            app:layout_constraintTop_toBottomOf="@+id/edit_text_email_id"
+            app:layout_constraintTop_toBottomOf="@+id/etEmail"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="8dp"
             app:layout_constraintVertical_bias="0.0"/>
 
 
     <Button
-            android:id="@+id/button_register"
+            android:id="@+id/btnRegister"
             android:layout_width="236dp"
             android:layout_height="48dp"
             android:layout_alignParentEnd="true"
