add toolbar controller, bottom navigation, fix auth

--- a/app/src/main/res/layout/activity_root.xml
+++ b/app/src/main/res/layout/activity_root.xml
@@ -33,7 +33,7 @@
 
             <TextView
                     android:layout_marginStart="@dimen/margin_xl"
-                    style="@style/TextBottomNavigation"
+                    style="@style/HeaderTextFont"
                     android:text="@string/app_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
@@ -46,11 +46,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
-        <View
-                android:id="@+id/collapseView"
-                android:visibility="visible"
-                android:layout_width="match_parent"
-                android:layout_height="?actionBarSize"/>
+        <View android:id="@+id/collapseView"
+              android:visibility="visible"
+              android:layout_width="match_parent"
+              android:layout_height="?actionBarSize"/>
 
         <FrameLayout
                 android:id="@+id/rootContainer"
