--- a/app/src/main/res/layout/layout_bottom_navigation_view.xml
+++ b/app/src/main/res/layout/layout_bottom_navigation_view.xml
@@ -1,126 +1,133 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <androidx.constraintlayout.widget.ConstraintLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_gravity="bottom"
-            android:background="@color/bottom_navigation_view_color"
-            android:layout_height="@dimen/size_bottom_navigation">
+<androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_gravity="bottom"
+        android:background="@color/bottom_navigation_view_color"
+        android:layout_height="@dimen/size_bottom_navigation">
 
-        <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/bottom_news"
-                android:src="@drawable/button_news"
-                android:layout_width="@dimen/size_bottom_navigation_icon"
-                android:layout_height="@dimen/size_bottom_navigation_icon"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/bottom_message"
-                android:layout_marginTop="@dimen/margin_xs"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toTopOf="@+id/textView3"/>
-
-
-        <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/bottom_message"
-                android:src="@drawable/button_message"
-                android:layout_width="@dimen/size_bottom_navigation_icon"
-                android:layout_height="@dimen/size_bottom_navigation_icon"
-                app:layout_constraintStart_toEndOf="@+id/bottom_news"
-                app:layout_constraintEnd_toStartOf="@+id/bottom_main"
-                android:layout_marginTop="@dimen/margin_xs"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toTopOf="@+id/textView2"/>
+    <de.hdodenhof.circleimageview.CircleImageView
+            app:civ_border_color="@color/color_white"
+            android:id="@+id/bottom_news"
+            android:src="@drawable/button_news"
+            android:layout_width="@dimen/size_bottom_navigation_icon"
+            android:layout_height="@dimen/size_bottom_navigation_icon"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/bottom_message"
+            android:layout_marginTop="@dimen/margin_xs"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/tvBottomNews"/>
 
 
-        <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/bottom_main"
-                android:src="@drawable/button_main"
-                android:layout_width="@dimen/size_bottom_navigation_icon_main"
-                android:layout_height="@dimen/size_bottom_navigation_icon_main"
-                app:layout_constraintStart_toEndOf="@+id/bottom_message"
-                app:layout_constraintEnd_toStartOf="@+id/bottom_events"
-                android:layout_marginTop="4dp"
-                app:layout_constraintTop_toTopOf="parent"/>
+    <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/bottom_message"
+            app:civ_border_color="@color/color_white"
+            android:src="@drawable/button_message"
+            android:layout_width="@dimen/size_bottom_navigation_icon"
+            android:layout_height="@dimen/size_bottom_navigation_icon"
+            app:layout_constraintStart_toEndOf="@+id/bottom_news"
+            app:layout_constraintEnd_toStartOf="@+id/bottom_main"
+            android:layout_marginTop="@dimen/margin_xs"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/tvBottomMessage"/>
 
 
-        <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/bottom_events"
-                android:src="@drawable/button_event"
-                android:layout_width="@dimen/size_bottom_navigation_icon"
-                android:layout_height="@dimen/size_bottom_navigation_icon"
-                app:layout_constraintStart_toEndOf="@+id/bottom_main"
-                app:layout_constraintEnd_toStartOf="@+id/bottom_my_hikes"
-                android:layout_marginTop="@dimen/margin_xs"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toTopOf="@+id/textView5"/>
-
-        <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/bottom_my_hikes"
-                android:src="@drawable/button_my_hike"
-                android:layout_width="@dimen/size_bottom_navigation_icon"
-                android:layout_height="@dimen/size_bottom_navigation_icon"
-                app:layout_constraintStart_toEndOf="@+id/bottom_events"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="@dimen/margin_xs"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toTopOf="@+id/textView6"/>
+    <de.hdodenhof.circleimageview.CircleImageView
+            app:civ_border_color="@color/color_white"
+            app:civ_border_width="1dp"
+            android:id="@+id/bottom_main"
+            android:src="@drawable/button_main"
+            android:layout_width="@dimen/size_bottom_navigation_icon_main"
+            android:layout_height="@dimen/size_bottom_navigation_icon_main"
+            app:layout_constraintStart_toEndOf="@+id/bottom_message"
+            app:layout_constraintEnd_toStartOf="@+id/bottom_events"
+            android:layout_marginTop="4dp"
+            app:layout_constraintTop_toTopOf="parent"/>
 
 
-        <TextView
-                style="@style/TextBottomNavigation"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:text="@string/news"
-                android:id="@+id/textView3"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/bottom_news"
-                app:layout_constraintEnd_toEndOf="@+id/bottom_news"
-                app:layout_constraintStart_toStartOf="@+id/bottom_news"/>
+    <de.hdodenhof.circleimageview.CircleImageView
+            app:civ_border_color="@color/color_white"
+            android:id="@+id/bottom_events"
+            android:src="@drawable/button_event"
+            android:layout_width="@dimen/size_bottom_navigation_icon"
+            android:layout_height="@dimen/size_bottom_navigation_icon"
+            app:layout_constraintStart_toEndOf="@+id/bottom_main"
+            app:layout_constraintEnd_toStartOf="@+id/bottom_my_hikes"
+            android:layout_marginTop="@dimen/margin_xs"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/tvBottomEvents"/>
+
+    <de.hdodenhof.circleimageview.CircleImageView
+            app:civ_border_color="@color/color_white"
+            android:id="@+id/bottom_my_hikes"
+            android:src="@drawable/button_my_hike"
+            android:layout_width="@dimen/size_bottom_navigation_icon"
+            android:layout_height="@dimen/size_bottom_navigation_icon"
+            app:layout_constraintStart_toEndOf="@+id/bottom_events"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="@dimen/margin_xs"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/tvBottomMyHikes"/>
 
 
-        <TextView
-                style="@style/TextBottomNavigation"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:text="@string/message"
-                android:id="@+id/textView2"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/bottom_message"
-                app:layout_constraintStart_toStartOf="@+id/bottom_message"
-                app:layout_constraintEnd_toEndOf="@+id/bottom_message"/>
+    <TextView
+            style="@style/TextBottomNavigation"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text="@string/news"
+            android:id="@+id/tvBottomNews"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/bottom_news"
+            app:layout_constraintEnd_toEndOf="@+id/bottom_news"
+            app:layout_constraintStart_toStartOf="@+id/bottom_news"/>
 
-        <TextView
-                style="@style/TextBottomNavigation"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:text="@string/hikes"
-                android:id="@+id/textView6"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/bottom_my_hikes"
-                app:layout_constraintStart_toStartOf="@+id/bottom_my_hikes"
-                app:layout_constraintEnd_toEndOf="@+id/bottom_my_hikes"/>
 
-        <TextView
-                style="@style/TextBottomNavigation"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:text="@string/events"
-                android:id="@+id/textView5"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/bottom_events"
-                app:layout_constraintEnd_toEndOf="@+id/bottom_events"
-                app:layout_constraintStart_toStartOf="@+id/bottom_events"/>
+    <TextView
+            style="@style/TextBottomNavigation"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text="@string/message"
+            android:id="@+id/tvBottomMessage"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/bottom_message"
+            app:layout_constraintStart_toStartOf="@+id/bottom_message"
+            app:layout_constraintEnd_toEndOf="@+id/bottom_message"/>
 
-        <TextView
-                style="@style/TextBottomNavigation"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:text="@string/main"
-                android:id="@+id/textView4"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/bottom_main"
-                android:layout_marginBottom="6dp"
-                android:layout_marginTop="4dp"
-                app:layout_constraintEnd_toEndOf="@+id/bottom_main"
-                app:layout_constraintStart_toStartOf="@+id/bottom_main"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+            style="@style/TextBottomNavigation"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text="@string/hikes"
+            android:id="@+id/tvBottomMyHikes"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/bottom_my_hikes"
+            app:layout_constraintStart_toStartOf="@+id/bottom_my_hikes"
+            app:layout_constraintEnd_toEndOf="@+id/bottom_my_hikes"/>
+
+    <TextView
+            style="@style/TextBottomNavigation"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text="@string/events"
+            android:id="@+id/tvBottomEvents"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/bottom_events"
+            app:layout_constraintEnd_toEndOf="@+id/bottom_events"
+            app:layout_constraintStart_toStartOf="@+id/bottom_events"/>
+
+    <TextView
+            style="@style/TextBottomNavigation"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text="@string/main"
+            android:textColor="@color/text_white_selected"
+            android:id="@+id/tvBottomMain"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/bottom_main"
+            android:layout_marginBottom="6dp"
+            android:layout_marginTop="4dp"
+            app:layout_constraintEnd_toEndOf="@+id/bottom_main"
+            app:layout_constraintStart_toStartOf="@+id/bottom_main"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
