--- a/app/src/main/res/layout/fragment_sing_in.xml
+++ b/app/src/main/res/layout/fragment_sing_in.xml
@@ -17,7 +17,7 @@
             android:hint="@string/email"
             android:inputType="textEmailAddress"
             android:textColor="@color/text_white_selected"
-            android:textColorHint="@color/color_grey"
+            android:textColorHint="@color/hint_color"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -33,7 +33,7 @@
             android:layout_marginRight="8dp"
             android:layout_marginTop="6dp"
             android:hint="@string/password"
-            android:textColorHint="@color/color_grey"
+            android:textColorHint="@color/hint_color"
             android:inputType="textPassword"
             android:textColor="@color/text_white_selected"
             app:layout_constraintBottom_toBottomOf="parent"
