--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -2,76 +2,63 @@
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/start_activity">
 
     <EditText
             android:id="@+id/etDisplayName"
-            android:layout_width="236dp"
-            android:layout_height="40dp"
+            android:layout_width="@dimen/button_width"
+            android:layout_height="@dimen/button_height"
             android:hint="@string/user_name"
             android:inputType="textEmailAddress"
             android:textColor="@color/text_white_selected"
             android:textColorHint="@color/hint_color"
-            tools:layout_editor_absoluteY="315dp" tools:layout_editor_absoluteX="88dp"/>
+            android:layout_marginBottom="@dimen/margin_xs"
+            app:layout_constraintBottom_toTopOf="@+id/etEmail"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
 
 
     <EditText
-
             android:id="@+id/etEmail"
-            android:layout_width="236dp"
-            android:layout_height="40dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="229dp"
+            android:layout_width="@dimen/button_width"
+            android:layout_height="@dimen/button_height"
             android:hint="@string/email"
             android:inputType="textEmailAddress"
             android:textColor="@color/text_white_selected"
             android:textColorHint="@color/hint_color"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.296"/>
+            app:layout_constraintStart_toEndOf="@+id/etDisplayName"
+            app:layout_constraintEnd_toStartOf="@+id/etDisplayName"
+            android:layout_marginBottom="@dimen/margin_xs"
+            app:layout_constraintBottom_toTopOf="@+id/etPassword"/>
 
 
     <EditText
-
             android:id="@+id/etPassword"
             android:hint="@string/password"
             android:inputType="textPassword"
-            android:layout_width="236dp"
-            android:layout_height="40dp"
+            android:layout_width="@dimen/button_width"
+            android:layout_height="@dimen/button_height"
             android:textColor="@color/text_white_selected"
             android:textColorHint="@color/hint_color"
-            android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginTop="6dp"
-            app:layout_constraintTop_toBottomOf="@+id/etEmail"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintVertical_bias="0.0"/>
+            app:layout_constraintStart_toEndOf="@+id/etEmail"
+            app:layout_constraintEnd_toStartOf="@+id/etEmail"
+            android:layout_marginBottom="@dimen/margin_xs"
+            app:layout_constraintBottom_toTopOf="@+id/btnRegister"/>
 
 
     <Button
             android:id="@+id/btnRegister"
-            android:layout_width="236dp"
-            android:layout_height="48dp"
+            android:layout_width="@dimen/button_width"
+            android:layout_height="@dimen/button_height"
             android:layout_alignParentEnd="true"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp"
             android:background="@color/colorPrimary"
             android:text="@string/register"
             android:textColor="@color/text_white_selected"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.807"/>
-
+            app:layout_constraintStart_toEndOf="@+id/etPassword"
+            app:layout_constraintEnd_toStartOf="@+id/etPassword"
+            android:layout_marginBottom="@dimen/button_margin_bottom"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
