--- a/app/src/main/res/layout/activity_root.xml
+++ b/app/src/main/res/layout/activity_root.xml
@@ -20,6 +20,7 @@
                 app:popupTheme="@style/AppTheme.PopupOverlay">
 
             <FrameLayout
+                    android:id="@+id/toolbarIcon"
                     android:background="@drawable/logo_in_toolbar"
                     android:layout_width="?actionBarSize"
                     android:layout_height="?actionBarSize">
@@ -32,6 +33,7 @@
 
 
             <TextView
+                    android:id="@+id/toolbarTitle"
                     android:layout_marginStart="@dimen/margin_xl"
                     style="@style/HeaderTextFont"
                     android:text="@string/app_name"
